# waycratelock

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  typos.yml
asserts/: source.qrc
assets/: resource.qrc
assets/config/: setting.toml
contrib/archlinuxlocal/: PKGBUILD
misc/: org.waycrate.lock.xml
qml/: MainView.qml  main.qml
src/: Command.cpp  Command.h  CommandLine.cpp  CommandLine.h  DBusBackend.cpp  DBusBackend.h  MediaPlayerBackend.cpp  MediaPlayerBackend.h  SessionLock.cpp  WindowElement.cpp  WindowElement.h  config.h  main.cpp
